Add widget that display ingredients

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +20,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.RecipeWidgetSettingsActivity"
+            android:label="@string/recipe_widget_settings_title"
+            android:parentActivityName=".ui.RecipesListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.RecipesListActivity" />
         </activity>
         <activity
             android:name=".ui.RecipeDetailActivity"
@@ -37,6 +46,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.RecipeDetailActivity" />
         </activity>
+
+        <receiver android:name=".widgets.IngredientsWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/ingredients_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
