--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
 
     // Android Test Dependencies
@@ -45,6 +44,14 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
+
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test:runner:0.5'
     testCompile 'junit:junit:4.12'
